[gd_scene load_steps=2 format=3 uid="uid://b8q6v4j2y5n3s"]

[ext_resource type="Script" uid="uid://dg6ylieeohmvr" path="res://server_item.gd" id="1_0k4m3"]

[node name="ServerItem" type="Panel"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
script = ExtResource("1_0k4m3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DefaultLabel" type="Label" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "[Default]"

[node name="URLLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Server URL"

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "Delete"

[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_delete_pressed"]
